# GIMMICK

./: CMakeLists.txt  LICENSE.md  README.md
cpp_test_village/: main.cpp  pathfinding.cpp  pathfinding.hpp  village_builder.cpp  village_builder.hpp  village_generator  village_objects.cpp  village_objects.hpp
include/: anvil.hpp  block_registry.hpp  block_states.hpp  block_template.hpp  blocks.hpp  buffer.hpp  chunk_dOOm_gen.hpp  chunk_encoding.hpp  generator.hpp  nbt.hpp
py_test_village/: generate_village.py  village_objects.py  visualize_rectangles.py
src/: anvil.cpp  block_registry.cpp  blocks.cpp  buffer.cpp  chunk_dOOm_gen.cpp  chunk_dOOm_gen.cu  chunk_encoding.cpp  chunk_encoding.cu  generator.cu  main.cpp  nbt.cpp
